prepare contact form and add spotify playlist of UTB

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 
     <nav class="top-right open">
-        <a class="disc l1">
+        <a class="disc l1" href="./contact.html">
             <div>
-            contact
+            reach out
                 </div>
         </a>
-        <a class="disc l2">
+        <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
         <a class="disc l3" href="./auction-stats.html">
