--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/retro-navbar.css" />
     <link rel="stylesheet" href="./css/stripped-diagonal-btn.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,12 +19,12 @@
 <body>
     
     <nav class="top-right open">
-        <a class="disc l1">
+        <a class="disc l1" href="./contact.html">
             <div>
                 contact
             </div>
         </a>
-        <a class="disc l2">
+        <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
         <a class="disc l3" href="./auction-stats.html">
@@ -60,7 +59,6 @@
 </div> -->
 
 <script>
-
 //typewriter
 // set up text to print, each item in array is new line
 var aText = new Array(
