--- a/auction-stats.html
+++ b/auction-stats.html
@@ -15,7 +15,7 @@
             reach out
                 </div>
         </a>
-        <a class="disc l2">
+        <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
         <a class="disc l3" href="./auction-stats.html">
