make hey-hoo on navbar

--- a/auction-stats.html
+++ b/auction-stats.html
@@ -38,8 +38,8 @@
 <script>
     toggle = document.querySelectorAll(".toggle")[0];
 nav = document.querySelectorAll("nav")[0];
-toggle_open_text = 'hi!';
-toggle_close_text = 'bye!';
+toggle_open_text = 'hey!';
+toggle_close_text = 'hoo!';
 
 toggle.addEventListener('click', function() {
 	nav.classList.toggle('open');
