--- a/contact.html
+++ b/contact.html
@@ -58,19 +58,6 @@
         </a>
     </nav>
 
-
-    <!-- <form id="contact-form">
-        <input type="hidden" name="contact_number">
-        <label>Name</label>
-        <input type="text" name="user_name">
-        <label>Email</label>
-        <input type="email" name="user_email">
-        <label>Message</label>
-        <textarea name="message"></textarea>
-        <input type="submit" value="Send">
-    </form> -->
-
-
     <div class="background">
         <div class="container">
           <div class="screen">
@@ -95,7 +82,7 @@
                 <!-- <div class="app-contact">CONTACT INFO : +62 81 314 928 595</div> -->
               </div>
               <div class="screen-body-item">
-                <div class="app-form">
+                <div class="app-form" id="contact-form">
                   <div class="app-form-group">
                     <input class="app-form-control" placeholder="name" name="sender_name" >
                   </div>
@@ -109,7 +96,7 @@
                     <textarea class="app-form-control" placeholder="message" name="sender_message"></textarea>
                   </div>
                   <div class="app-form-group buttons">
-                    <button class="app-form-button">send</button>
+                    <button type="submit" class="app-form-button">send</button>
                   </div>
                 </div>
               </div>
