add smiley to navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
-        <a class="disc l3" href="./auction-stats.html">
+        <a class="disc l3" href="./apparels.html">
             <div>apparels</div>
         </a>
         <a class="disc l4" href="./about.html">
@@ -33,7 +33,7 @@
 
 
 
-    <img src="./img/under_the_bottom.png" width="360px" height="360px">
+    <img src="./img/under_the_bottom.png" width="240px" height="240px">
 
     <h1> Under the Bottom</h1>
 
@@ -50,7 +50,7 @@
     toggle = document.querySelectorAll(".toggle")[0];
 nav = document.querySelectorAll("nav")[0];
 toggle_open_text = 'hey!';
-toggle_close_text = 'hoo!';
+toggle_close_text = '<img src="./img/under_the_bottom.png" width="112px" height="112px">';
 
 toggle.addEventListener('click', function() {
 	nav.classList.toggle('open');
