--- a/music.html
+++ b/music.html
@@ -28,7 +28,7 @@
         <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
-        <a class="disc l3" href="./auction-stats.html">
+        <a class="disc l3" href="./apparels.html">
             <div>apparels</div>
         </a>
         <a class="disc l4" href="./index.html">
@@ -39,10 +39,10 @@
         </a>
     </nav>
     
-    
-    <iframe src="https://open.spotify.com/embed/artist/5OOJUPzDTRkcqKNI5r044w?theme=0" width="80%" height="400" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>    <!-- <img src="./img/under_the_bottom.png" width="360px" height="360px"> -->
- 
-
+    <div>
+        <iframe src="https://open.spotify.com/embed/artist/5OOJUPzDTRkcqKNI5r044w?theme=0" width="80%" height="420" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>    
+        <iframe src="https://open.spotify.com/embed/album/1O3cVK9VA5oj6LV2jytqvn?theme=0" width="80%" height="420" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
 
 
@@ -59,7 +59,7 @@
     toggle = document.querySelectorAll(".toggle")[0];
 nav = document.querySelectorAll("nav")[0];
 toggle_open_text = 'hey!';
-toggle_close_text = 'hoo!';
+toggle_close_text = '<img src="./img/under_the_bottom.png" width="112px" height="112px">';
 
 toggle.addEventListener('click', function() {
 	nav.classList.toggle('open');
