add utblifestyle.store to corner menu

--- a/apparels.html
+++ b/apparels.html
@@ -4,7 +4,6 @@
     <title>apparels</title>
     <link rel="stylesheet" href="./css/top-vibration.css" >
     <link rel="stylesheet" href="./css/bubble.css" >
-    <link rel="stylesheet/less" type="text/css" href="./css/cards.less" />
     <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
     <link rel="stylesheet" href="./css/retro-navbar.css" />
     <link rel="stylesheet" href="./css/stripped-diagonal-btn.css" />
@@ -31,7 +30,7 @@
         <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
-        <a class="disc l3" href="./apparels.html">
+        <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
             <div>apparels</div>
         </a>
         <a class="disc l4" href="./index.html">
