--- a/auction-stats.html
+++ b/auction-stats.html
@@ -18,7 +18,7 @@
         <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
-        <a class="disc l3" href="./apparels.html">
+        <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
             <div>apparels</div>
         </a>
         <a class="disc l4" href="./index.html">
