--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
-        <a class="disc l3" href="./auction-stats.html">
+        <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
             <div>apparels</div>
         </a>
         <a class="disc l4" href="./index.html">
