--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
         <a class="disc l2"  href="./music.html">
             <div>music</div>
         </a>
-        <a class="disc l3" href="./apparels.html">
-            <div>apparels</div>
+        <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
+          <div>apparels</div>
         </a>
         <a class="disc l4" href="./about.html">
             <div>about</div>
