--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
     toggle = document.querySelectorAll(".toggle")[0];
 nav = document.querySelectorAll("nav")[0];
 toggle_open_text = 'hey!';
-toggle_close_text = 'hoo!';
+toggle_close_text = '<img src="./img/under_the_bottom.png" width="112px" height="112px">';
 
 toggle.addEventListener('click', function() {
 	nav.classList.toggle('open');
@@ -126,6 +126,8 @@ toggle.addEventListener('click', function() {
 setTimeout(function(){
 	nav.classList.toggle('open');	
 }, 800);
+
+
 </script>
 
 </body>
