--- a/about.html
+++ b/about.html
@@ -4,7 +4,11 @@
     <title>about</title>
     <link rel="stylesheet" href="./css/top-vibration.css" >
     <link rel="stylesheet" href="./css/bubble.css" >
+    <link rel="stylesheet" href="./css/common.css">
+
     <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
+    <script src="./js/navbar.js"></script>
+
     <link rel="stylesheet" href="./css/retro-navbar.css" />
     <link rel="stylesheet" href="./css/stripped-diagonal-btn.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -59,6 +63,9 @@
 </div> -->
 
 <script>
+
+document.addEventListener("DOMContentLoaded", loadNavbar());
+
 //typewriter
 // set up text to print, each item in array is new line
 var aText = new Array(
@@ -104,26 +111,7 @@ function typewriter()
 typewriter();
 
 
-// navbar
 
-    toggle = document.querySelectorAll(".toggle")[0];
-nav = document.querySelectorAll("nav")[0];
-toggle_open_text = 'hey!';
-toggle_close_text = '<img src="./img/under_the_bottom.png" width="112px" height="112px">';
-
-toggle.addEventListener('click', function() {
-	nav.classList.toggle('open');
-	
-  if (nav.classList.contains('open')) {
-    toggle.innerHTML = toggle_close_text;
-  } else {
-    toggle.innerHTML = toggle_open_text;
-  }
-}, false);
-
-setTimeout(function(){
-	nav.classList.toggle('open');	
-}, 800);
 </script>
 
 </body>
