--- a/auction-stats.html
+++ b/auction-stats.html
@@ -2,9 +2,24 @@
 
 <head>
     <title>auction stats</title>
-    <link rel="stylesheet" href="./css/bubble.css" >
-    <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
+    <!-- <link rel="stylesheet" href="./css/bubble.css" > -->
+    <link rel="stylesheet" href="./css/styled-text.css"/>
     <link rel="stylesheet" href="./css/retro-navbar.css" />
+    <link rel="stylesheet" href="./css/auction-stats.css"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+
+    <script src="https://cdn.jsdelivr.net/npm/less@3.13" ></script>
+    <script src="./js/navbar.js"></script>
+    <script src="./js/dataFetcher.js"></script>
+
+      
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
+
+
+
 </head>
 
 <body>
@@ -30,30 +45,20 @@
     </nav>
 
 
+<div class="styled-txt">
+    <h3>auction stats</h3>
+</div>
 
-<h5>auction stats</h5>
+<div id="results">
 
+</div>
 
 
 <script>
-    toggle = document.querySelectorAll(".toggle")[0];
-nav = document.querySelectorAll("nav")[0];
-toggle_open_text = 'hey!';
-toggle_close_text = '<img src="./img/under_the_bottom.png" width="112px" height="112px">';
+    document.addEventListener("DOMContentLoaded", loadNavbar());
+    document.addEventListener("DOMContentLoaded", auctionEvents());
 
-toggle.addEventListener('click', function() {
-	nav.classList.toggle('open');
-	
-  if (nav.classList.contains('open')) {
-    toggle.innerHTML = toggle_close_text;
-  } else {
-    toggle.innerHTML = toggle_open_text;
-  }
-}, false);
 
-setTimeout(function(){
-	nav.classList.toggle('open');	
-}, 800);
 </script>
 
 </body>
