--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 
 <head>
     <title>hi, this is utb</title>
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/top-vibration.css" >
     <link rel="stylesheet" href="./css/bubble.css" >
     <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
+    <script src="./js/navbar.js"></script>
+    
     <link rel="stylesheet" href="./css/retro-navbar.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +25,7 @@
                 </div>
         </a>
         <a class="disc l2"  href="./music.html">
-            <div>music</div>
+            <div>multimedia</div>
         </a>
         <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
             <div>apparels</div>
@@ -47,24 +54,7 @@
 </div>
 
 <script>
-    toggle = document.querySelectorAll(".toggle")[0];
-nav = document.querySelectorAll("nav")[0];
-toggle_open_text = 'hey!';
-toggle_close_text = '<img src="./img/utb-mov.gif" width="112px" height="112px">';
-
-toggle.addEventListener('click', function() {
-	nav.classList.toggle('open');
-	
-  if (nav.classList.contains('open')) {
-    toggle.innerHTML = toggle_close_text;
-  } else {
-    toggle.innerHTML = toggle_open_text;
-  }
-}, false);
-
-setTimeout(function(){
-	nav.classList.toggle('open');	
-}, 800);
+    document.addEventListener("DOMContentLoaded", loadNavbar());
 </script>
 
 </body>
