update images and content for bids

--- a/bidding-history.html
+++ b/bidding-history.html
@@ -62,16 +62,20 @@
 <div class="card-box">
   <div class="big-card">
    <div class="card-header">
-    <div class="card-title" id="artwork-name">smiley</div>
-    <div class="collection-total-value">Est. Value $557.30</div>
+    <div class="set-icon">
+      <img src="./img/under_the_bottom.png" style="background-color: black;"/>
+
+    </div>
+    <div class="card-title" id="artwork-name"></div>
+    <div class="collection-total-value">Bidding will start @ August 5</div>
    </div>
-   <div class="big-card-count">Bidding will start at x.y.z</div>
-   <div class="big-card-bar"></div>
+   <div class="big-card-count">Bidding will start at August 5!</div>
+   <!-- <div class="big-card-bar"></div> -->
   </div>
   <div class="set-card-box">
    <div class="set-card">
     <div class="set-icon">
-      <img src="./img/under_the_bottom.png" style="background-color: black;"/>
+      <img src="./img/bid_placed.png" style="background-color: black;"/>
 
     </div>
     <div class="set-info">
