resize bidPlaced img

--- a/bidding-history.html
+++ b/bidding-history.html
@@ -67,15 +67,15 @@
 
     </div>
     <div class="card-title" id="artwork-name"></div>
-    <div class="collection-total-value">Bidding will start @ August 5</div>
+    <div class="collection-total-value" id="artist-name">Bidding will start @ August 5</div>
    </div>
-   <div class="big-card-count">Bidding will start at August 5!</div>
+   <div class="big-card-count"></div>
    <!-- <div class="big-card-bar"></div> -->
   </div>
   <div class="set-card-box">
    <div class="set-card">
     <div class="set-icon">
-      <img src="./img/bid_placed.png" style="background-color: black;"/>
+      <img src="./img/bid_placed.png" style="background-color: black; height: 120px; width: 120px;"/>
 
     </div>
     <div class="set-info">
