--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 
 
 
-    <h1> Under the B<span><img src="./img/biggty-smiley-removebg.png" width="54px" height="54px"></span>tt<span><img src="./img/biggty-smiley-removebg.png" width="54px" height="54px"></span>m</h1>
+    <h1> 
+        Under the B<span><img src="./img/biggty-smiley-removebg.png" width="54px" height="54px"></span>tt<span><img src="./img/biggty-smiley-removebg.png" width="54px" height="54px"></span>m
+    </h1>
+
     <!-- <p>The saying “never over the top” is a lifestyle we at UTB live by. Keep everything unique, fresh, and catchy; never go over the top; never over do it nor water it down. We expect big things from ourselves in the near future and will settle for nothing less.</p> -->
 
     <div id="countdown">
