--- a/bidding-history.html
+++ b/bidding-history.html
@@ -63,7 +63,7 @@
   <div class="big-card">
    <div class="card-header">
     <div class="set-icon">
-      <img src="./img/under_the_bottom.png" style="background-color: black;"/>
+      <img src="./img/under_the_bottom.png" style="background-color: black; height: 120px; width: 120px;"/>
 
     </div>
     <div class="card-title" id="artwork-name"></div>
