--- a/bidding-history.html
+++ b/bidding-history.html
@@ -43,7 +43,7 @@
         <div>multimedia</div>
     </a>
     <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-        <div>apparels</div>
+        <div>store</div>
     </a>
     <a class="disc l4" href="./index.html">
         <div>home</div>
