--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <div>music</div>
         </a>
         <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-          <div>apparels</div>
+          <div>store</div>
         </a>
         <a class="disc l4" href="./about.html">
             <div>about</div>
