--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div>multimedia</div>
         </a>
         <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-            <div>apparels</div>
+            <div>store</div>
         </a>
         <a class="disc l4" href="./about.html">
             <div>about</div>
