--- a/music.html
+++ b/music.html
@@ -33,7 +33,7 @@
             <div>music</div>
         </a>
         <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-            <div>apparels</div>
+            <div>store</div>
         </a>
         <a class="disc l4" href="./index.html">
             <div> &lt;| home</div>
