--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/bubble.css" >
     <link rel="stylesheet" href="./css/common.css">
 
-    <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/less@3.13" ></script>
     <script src="./js/navbar.js"></script>
 
     <link rel="stylesheet" href="./css/retro-navbar.css" />
