--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
     <title>contact us</title>
     <link rel="stylesheet" href="./css/top-vibration.css" >
     <link rel="stylesheet" href="./css/bubble.css" >
-    <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/less@3.13" ></script>
     <link rel="stylesheet" href="./css/retro-navbar.css" />
     <link rel="stylesheet" href="./css/contact-form.css" />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript" src="https:https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script type="text/javascript">
     (function() {
     emailjs.init("user_dTEgy7iI0xPUvE7OaVaMe");
