--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./css/countdown.css">
 
 
-    <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/less@3.13" ></script>
     <script src="./js/navbar.js"></script>
     <script src="./js/countdown.js"></script>
+
     
     <link rel="stylesheet" href="./css/retro-navbar.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
