make icon with pointer, update navbar on bid history page

--- a/bidding-history.html
+++ b/bidding-history.html
@@ -46,7 +46,7 @@
         <div>store</div>
     </a>
     <a class="disc l4" href="./index.html">
-        <div>home</div>
+        <div>&lt;| </div>
     </a>
     <a class="disc l5 toggle">
         hey!
