--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       
 <div class="bubble bubble--highlight">
-<a href="./bidding-history.html">
+<a href="./bidding-history.html" style="cursor: pointer;">
     show me the auction stats
 </a>
 </div>
