replace img with high-res

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </nav>
     
     
-    <img src="./img/under_the_bottom.png" width="360px" height="360px">
+    <img src="./img/utb.png" width="360px" height="360px">
     <a href="https://utbworldwide.com/about/" target="_blank">
         <button class="btn btn--stripe">
                 more about us
