--- a/bidding-history.html
+++ b/bidding-history.html
@@ -63,7 +63,7 @@
   <div class="big-card">
    <div class="card-header">
     <div class="set-icon">
-      <img src="./img/under_the_bottom.png" style="background-color: black; height: 120px; width: 120px;"/>
+      <img src="./img/utb.png" style="background-color: black; height: 124px; width: 124px;"/>
 
     </div>
     <div class="card-title" id="artwork-name"></div>
@@ -75,7 +75,7 @@
   <div class="set-card-box">
    <div class="set-card">
     <div class="set-icon">
-      <img src="./img/bid_placed.png" style="background-color: black; height: 120px; width: 120px;"/>
+      <img src="./img/bid_placed.png" style="background-color: black; height: 124px; width: 124px;"/>
 
     </div>
     <div class="set-info">
