--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-    <img src="./img/under_the_bottom.png" width="480px" height="480px">
+    <img src="./img/utb.png" width="480px" height="480px">
 
 
 
