--- a/timeline.html
+++ b/timeline.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="desc">
                      UTB released season 1 
-                  <img src="./img/under_the_bottom.png" height="240px" width="240px">
+                  <img src="./img/utb.png" height="240px" width="240px">
                 </div>
             </div>
         </li>
