remove upright link

--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 			<!-- Top Navigation -->
 			<div class="codrops-top clearfix">
 				<a href="./index.html"><span><img src="./img/utb.png" width="32px" height="32px"/></span></a> 
-				<span class="right"><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=19119"><span>Go to timeline</span></a></span>
+				<!-- <span class="right"><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=19119"><span>Go to timeline</span></a></span> -->
 			</div>
 			<header class="header">
 				<div class="bg-img"><img src="img/d_n_g.jpeg" alt="David vs. Goliath" /></div>
