--- a/timeline.html
+++ b/timeline.html
@@ -148,7 +148,7 @@
         <li>
             <div class="direction-r">
                 <div class="flag-wrapper">
-                    <span class="flag">Diddy effect asdasdasdasdasdasd asdasdasdasdasdasd</span>
+                    <span class="flag">Diddy effect</span>
                     <span class="time-wrapper"><span class="time">2010</span></span>
                 </div>
                 <div class="desc">
