update multimedia navbar

--- a/index3.html
+++ b/index3.html
@@ -91,8 +91,11 @@
             </aside>
             
             <p>
-                in its formative years, what started as an inside slang symbol for a tight-knit community of SoCal art hustlers, grew into an iconic brand in hip hop and streetwear culture, drawn on by rap icons from Diddy to Wiz Khalifa.
+                In its formative years, what started as an inside slang symbol for a tight-knit community of SoCal art hustlers, grew into an iconic brand in hip hop and streetwear culture, drawn on by rap icons from Diddy to Wiz Khalifa.
             </p>
+
+            <p>
+                today, Money Mouth Smiley© is reproduced and recognized by billions of people all over the globe, but only one can own the original design by its authentic creators. The retrofuturist symbol embodies the aspirational mindset of creators, dreamers, and anyone trying to come up in the world, especially in the face of long odds. It's a brazen digital emblem of David standing over Goliath, sticking his tongue out at the slain cyborg-giant, sling in hand.  </p>
             
           </div>
 
