--- a/timeline.html
+++ b/timeline.html
@@ -20,28 +20,37 @@
 
 <body>
     
-    <div style="color: black !important;">
-
+    <div>
+        <a style="margin-top: 30px;">
+            <img src="./img/utb.png" width="110px" height="110px">
+        </a>
+    </div>
+    <div id="navbar" style="color: black !important;">
         <nav class="top-right open">
-          <a class="disc l1" href="./contact.html">
-              <div>
-              reach out
-                  </div>
-          </a>
-          <a class="disc l2"  href="./music.html">
-              <div>multimedia</div>
-          </a>
-          <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-              <div>store</div>
-          </a>
-          <a class="disc l4" href="./index.html">
-              <div>&lt;| home </div>
-          </a>
-          <a class="disc l5 toggle">
-              hey!
-          </a>
-      </nav>
-      </div>
+            <!-- <a class="disc l1" href="./contact.html">
+                <div>
+                contact
+                    </div>
+            </a> -->
+            <!-- <a class="disc l2"  href="./music.html">
+                <div>multimedia</div>
+            </a>
+            <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
+                <div>store</div>
+            </a>
+            -->
+
+            <a class="disc l3" href="./about.html">
+                <div>shop</div>
+            </a>
+            <a class="disc l4" href="./about.html">
+                <div>contact</div>
+            </a>
+            <a class="disc l5 toggle">
+                <img src="./img/utb.png" width="110px" height="110px">
+            </a>
+        </nav>
+    </div>
     
   
     <!-- The Timeline -->
