update links on the bullseye nav

--- a/contact.html
+++ b/contact.html
@@ -37,26 +37,42 @@
 </head>
 
 <body>
+  <nav class="top-right open">
+    <!-- <a class="disc l1" href="./contact.html">
+        <div>
+        contact
+            </div>
+    </a> -->
+    <!-- <a class="disc l2"  href="./music.html">
+        <div>multimedia</div>
+    </a>
+    <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
+        <div>store</div>
+    </a>
+    -->
 
-    <nav class="top-right open">
-        <a class="disc l1" href="./contact.html">
-            <div>
-            reach out
-                </div>
-        </a>
-        <a class="disc l2"  href="./music.html">
-            <div>music</div>
-        </a>
-        <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-          <div>store</div>
-        </a>
-        <a class="disc l4" href="./about.html">
-            <div>about</div>
-        </a>
-        <a class="disc l5 toggle">
-            hey!
-        </a>
-    </nav>
+
+
+    <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
+        <div>merch |> </div>
+    </a>
+
+    <a class="disc l4" href="./music.html">
+      <div>music & videos</div>
+  </a>
+    <a class="disc l5 toggle">
+        <img src="./img/utb.png" width="110px" height="110px">
+    </a>
+</nav>
+
+
+<div class="styled-txt" style="padding-left:20px; padding-top: 12px;">
+  <a href="./index.html" style="cursor: pointer;">
+
+      <img src="./img/utb.png" width="110px" height="110px">
+  </a>
+
+</div>
 
     <div class="background">
         <div class="container">
