--- a/index.html
+++ b/index.html
@@ -31,23 +31,16 @@
 
     <div id="navbar">
         <nav class="top-right open">
-            <!-- <a class="disc l1" href="./contact.html">
-                <div>
-                contact
-                    </div>
-            </a> -->
-            <!-- <a class="disc l2"  href="./music.html">
-                <div>multimedia</div>
+          
+        
+            <a class="disc l2" href="https://www.utblifestyle.store/" target="_blank">
+                <div>merch |> </div>
             </a>
-            <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-                <div>store</div>
-            </a>
-            -->
 
-            <a class="disc l3" href="./about.html">
-                <div>shop</div>
+            <a class="disc l3" href="./music.html">
+                <div>music & videos </div>
             </a>
-            <a class="disc l4" href="./about.html">
+            <a class="disc l4" href="./contact.html">
                 <div>contact</div>
             </a>
             <a class="disc l5 toggle">
