--- a/music.html
+++ b/music.html
@@ -24,8 +24,14 @@
 <body>
     
     <nav class="top-right open">
-        <a class="disc l4" href="https://www.utblifestyle.store/" target="_blank">
+
+
+        <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
             <div>merch |></div>
+        </a>
+
+        <a class="disc l4" href="./contact.html">
+            <div>contact</div>
         </a>
         <!-- <a class="disc l4" href="./music.html">
             <div>music</div>
