--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <br> <br>
             <aside style="background: #ff206e;">
             <header>
-                Before emojis, there was.. the Money Mouth Smiley©.
+                b4 emojis, there was.. the Money Mouth Smiley©.
             </header> 
 
 
@@ -311,7 +311,6 @@
                   
                         <br><br> Retrofuturist symbol embodies the aspirational mindset of creators, dreamers, and anyone trying to come up in the world, especially in the face of long odds. 
                         <br><br>
-                        <!-- <img src="./img/david_vs_big_tech.jpeg" width="408px" height="256px"> -->
                         <img src="./img/david_vs_big_tech.jpeg" width="816px" height="512px">
     
                         <br><br>It's a brazen digital emblem of David standing over Goliath, sticking his tongue out at the slain cyborg-giant, sling in hand.
