--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
    
    <header style="background: black; color: white; margin-top: 20px;">Put Your Money</header> 
    <header style="background: black; color:white; ">Where Your Mouth Is!</header> 
-
+<br><br>
    <details style="margin-bottom: 30px;  font-size: 2em; color: rgb(236, 232, 232); background:black;  ">
 	<summary style="padding:30% auto; height: 80px; color: #0c0f0a; cursor: pointer; background: yellow; width: 60%; margin: auto; border-style: dashed; border-width: thick; border-color: red;">about the NFT</summary>        
 		<div style="font-weight: light; color: black; background: white; font-size:2rem;">
@@ -119,16 +119,13 @@
             <br> <br>
             <aside>
             <header>
-                b4 emojis, there was.. the Money Mouth Smiley©.
+                before emojis, there was.. the Money Mouth Smiley©.
             </header> 
 
 			
         </aside>
 
-		
-		
-
-              
+		      
         <div id="countdown">
             <div id='tiles'></div>
             <div class="labels">
@@ -158,11 +155,10 @@
 	
           <br><br>
           <div id="auction-results">
-            <details style="cursor: pointer; color: rgb(14, 13, 13); background: yellow; margin-bottom: 20px;">
+            <details style="cursor: pointer; color: rgb(14, 13, 13); background: yellow; margin-bottom: 20px; padding: 10px;">
                 <summary>auction results</summary>        
                 <p>..will be here</p>
             </details>
-            <br>
         </div>
 
 		
@@ -182,7 +178,7 @@
        </div>
 
 	   <details style=" color: rgb(236, 232, 232); background: rgb(14, 14, 10);  padding: 6px;">
-		<summary style=" fontsize: 0.6em; color: #0c0f0a; cursor: pointer; background: yellow; padding: 20px; ">who are we ?</summary>        
+		<summary style=" fontsize: 0.6em; color: #0c0f0a; cursor: pointer; background: yellow; padding: 10px; ">who are we ?</summary>        
 		<br>
 		<div id="asd" style="min-width: 360px;font-size:1em;">
 		  <h1> 
@@ -228,7 +224,8 @@
 			
 		  Own an authentic copyrighted artifact of the early 21st century digital revolution.
 	  
-			  The revolution will be minted.
+		  <br><br>
+		    The revolution will be minted.
 		   <br><br>
 	
 		   <iframe width="480" height="272" src="https://www.youtube.com/embed/5ilQXVXJJfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
