--- a/index.html
+++ b/index.html
@@ -97,11 +97,12 @@
 
 			</p>
 			<p> 
-				before emojis, nfts, crypto, social media, and the "lifestyle brands" that run on them, there was UTB's Money Mouth Smiley. yet its lasting cultural impact shows through every social zeitgeist of our post-2000 metaverse, from music, fashion, and meme culture to crypto, tech, and finance. 
+				<br>
+				Before emojis, nfts, crypto, social media, and the "lifestyle brands" that run on them, there was UTB's Money Mouth Smiley. yet its lasting cultural impact shows through every social zeitgeist of our post-2000 metaverse, from music, fashion, and meme culture to crypto, tech, and finance. 
 	
-			   <br><br> it's a piece of universal language, a globally legible pictographic letter of the internet alphabet. while pre-crypto, it uncannily encapsulates' crypto's culture and spirit, a rallying cry for a grassroots economic independence and empowerment community at the confluence of tech, art, language, money, and mindset. 
-				
-			   so, if you've ever said cryptoart is about culture or community, put your money where you're mouth is this August and bid on the Money Mouth Smiley nft.
+			   <br><br> It's a piece of universal language, a globally legible pictographic letter of the internet alphabet. while pre-crypto, it uncannily encapsulates' crypto's culture and spirit, a rallying cry for a grassroots economic independence and empowerment community at the confluence of tech, art, language, money, and mindset. 
+				<br><br>
+			   So, if you've ever said cryptoart is about culture or community, put your money where you're mouth is this August and bid on the Money Mouth Smiley nft.
 			</p>
 			<br>
 		</div>
@@ -672,6 +673,7 @@ function autoPlay(){
 	}
 }
 </script>
+
 
     <script>
     // $('#example').horizontalTimeline({
