make better txt

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 		  
 		  style="background: black; 
 				  color: yellow; 
-				  padding: 12px 12px;
+				  padding: 6px 6px;
 				  cursor: pointer;
 		  ">
-			  save the date <br><br>
+			  save the date <br>
 			  <u><span style="color: red;">h</span> 
 				  <span>e</span> 
 				  <span style="color: green;">r</span> 
