bring back seconds on countdown

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <li>Days</li>
               <li>Hours</li>
               <li>Mins</li>
-              <!-- <li>Secs</li> -->
+              <li>Secs</li>
             </div>
           </div>
 		  
@@ -156,7 +156,7 @@
 	
           <br><br>
           <div id="auction-results">
-            <details style="cursor: pointer; color: rgb(14, 13, 13); background: yellow; margin-bottom: 20px; padding: 10px;">
+            <details style="cursor: pointer; color: black; background: yellow; margin-bottom: 20px; padding: 10px;">
                 <summary>auction results</summary>        
                 <p>..will be here</p>
             </details>
@@ -178,7 +178,7 @@
           
        </div>
 
-	   <details style=" color: rgb(236, 232, 232); background: rgb(14, 14, 10);  padding: 6px;">
+	   <details style=" color: rgb(236, 232, 232); background: black;  padding: 6px;">
 		<summary style=" fontsize: 0.6em; color: #0c0f0a; cursor: pointer; background: yellow; padding: 10px; ">who are we ?</summary>        
 		<br>
 		<div id="asd" style="min-width: 360px;font-size:1em;">
