remove img from who are we section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
        </div>
 
 	   <details style=" color: rgb(236, 232, 232); background: black;  padding: 6px;">
-		<summary style=" fontsize: 0.6em; color: #0c0f0a; cursor: pointer; background: yellow; padding: 10px; ">who are we ?</summary>        
+		<summary style=" fontsize: 0.6em; color: #0c0f0a; cursor: pointer; background: yellow; padding: 10px; ">who are we?</summary>        
 		<br>
 		<div id="asd" style="min-width: 360px;font-size:1em;">
 		  <h1> 
@@ -192,9 +192,7 @@
 		</div>     
 		<p style="background: rgb(5, 5, 6); color: rgb(235, 223, 223);">
 		
-			From the creative depths of Moreno Valley, CA grew a timeless luxury lifestyle clothing line, branding agency and music Label, Dre Bigg$ and Treem Heff grew up Southern California sports stars. 
-			<br>
-			<img width="720px" height="480px" src="./img/skaterboi.jpeg"/>
+			From the Creative depths of Moreno Valley, CA grew a timeless luxury lifestyle clothing line. Branding Agency and music label. Dre Bigg$ and Treem Heff grew up Southern California sports stars, but also shared a unique business, fashion and entrepreneurial outlook on what was to become of their futures.		
 			<br><br>
 			They also shared a unique business, fashion and entrepreneurial outlook on what was to become of their futures. 
 			<br><br>
