update header and add rulers

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./css/socials.css" />
         <link rel="stylesheet" href="./css/horizontal-timeline.css">
 
+
     <script src="./js/navbar.js"></script>
     <script src="./js/countdown.js"></script>
 
@@ -70,15 +71,21 @@
    <header style="background: black; color:white; ">Where Your Mouth Is!</header> 
 
 <br>
-<header style="margin-top: 20px;">
+
+<hr>
+
+<header style="margin-top: 20px; font-size: 1em;">
 	Original copyrighted <img src="./img/utb.png" width="40px" height="40px"> smiley NFT auction 8/5 on 
 	<a href="https://knownorigin.io/utbworldwide" target="_blank" style="cursor: pointer;">KnownOrigin</a>
 </header>
-<br><br><br>
+<br>
+<hr>
+
+<br>
 <br>
 
-   <details style="margin-bottom: 50px; font-size: 2em; color: rgb(236, 232, 232); background:black;  ">
-	<summary style="padding:30% auto; height: 80px; color: #0c0f0a; cursor: pointer; background: yellow; width: 60%; margin: auto; border-style: dashed; border-width: thick; border-color: red;">about the NFT</summary>        
+   <details style="margin-bottom: 50px; color: rgb(236, 232, 232); background:black;  ">
+	<summary style="padding:30% auto;  font-size: 1.5em; height: 60px; color: #0c0f0a; cursor: pointer; background: yellow; width: 60%; margin: auto; border-style: dashed; border-width: thick; border-color: red;">about the NFT</summary>        
 		<div style="margin-left: 4px; font-weight: light; color: black; background: white; font-size:2rem;">
 
 			<div style=" background-color: black">
