--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
        </div>
 
 	   <details style=" color: rgb(236, 232, 232); background: black;  padding: 6px;">
-		<summary style=" fontsize: 0.6em; color: #0c0f0a; cursor: pointer; background: yellow; padding: 10px; ">who are we?</summary>        
+		<summary style="color: #0c0f0a; cursor: pointer; background: yellow; padding: 10px; ">who we are</summary>        
 		<br>
 		<div id="asd" style="min-width: 360px;font-size:1em;">
 		  <h1> 
@@ -198,16 +198,14 @@
 		
 			From the Creative cauldron of Moreno Valley, CA, grew a timeless luxury lifestyle clothing line, branding agency, and music label. Dre Bigg$ and Treem Heff grew up as Southern California sports stars , whose unique business, fashion, and entrepreneurial outlook became legendary and solidified their place in internet culture forever.
 			<br><br>
-			They also shared a unique business, fashion and entrepreneurial outlook on what was to become of their futures. 
-			<br><br>
+		
 			
+			In 2007 the beginning ideas of UTB Lifestyle LLC were started in the dorm rooms of Arizona State University and Cal Baptist University on sidekick 3’s via Tmail; Dozens of copy written logos were created and from these trademarks rose a new age Millennial Lifestyle Brand. 
+			<br><br>
 			<details style="font-size:1em; color: rgb(236, 232, 232); background: rgb(14, 14, 10); margin-bottom: 6px; padding: 6px;">
 				<summary style="cursor: pointer; background: red; color:black"><strong>more about us</strong></summary> 
 			  
 				<p style="background: rgb(5, 5, 6); color: rgb(235, 223, 223);">
-				
-					<br>
-					In 2007 the beginning ideas of UTB Lifestyle LLC were started in the dorm rooms of Arizona State University and Cal Baptist University on sidekick 3’s via Tmail; Dozens of copy written logos were created and from these trademarks rose a new age Millennial Lifestyle Brand. 
 					<br><br>
 					Mixing art, textiles, prints and collaborative ventures with Sylvia Rhone (via Sony/ Epic) Jonny Shipes (Cinematic/ The Smokers Club) and Wiz Khalifa (Taylor Gang) have made UTB a true staple in the culture. 
 					<br><br>
