--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </div>
 
 
-	<header>Our history</header>
+	<header style="margin-top: 40px;">Our history</header>
 <br>
         <div id="timeline">
             
