--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<br>
 				<img src="./img/david_vs_big_tech.jpeg" width="816px" height="512px">
 			<br>
-
+			<br>
 			<p> Before emojis, nfts, crypto, social media, and the "lifestyle brands" that run on them, there was UTB's Money Mouth Smiley©. Yet its lasting cultural impact shows through every social zeitgeist of our post-2000 metaverse, from music, fashion, and meme culture, to crypto, tech, and finance. </p>
 	
 			   <br>
@@ -296,10 +296,13 @@
             </li>
             <li id="2007-1510">
                 <p>UTB Visual Arts Copyright 
-					<a href="https://cocatalog.loc.gov/cgi-bin/Pwebrecon.cgi?v1=2&ti=1,2&Search%5FArg=UTB&Search%5FCode=TALL&CNT=25&PID=IisUoxCEksRnCe2hNSit81WkNa&SEQ=20210702173953&SID=6" target="_blank">
+					<a href="https://cocatalog.loc.gov/cgi-bin/Pwebrecon.cgi?v1=2&ti=1,2&Search%5FArg=UTB&Search%5FCode=TALL&CNT=25&PID=IisUoxCEksRnCe2hNSit81WkNa&SEQ=20210702173953&SID=6" 
+						style="cursor: pointer;"
+						target="_blank">
 						<span style="background-color: chocolate ;">
 							registered
-						</span> </a>
+						</span> 
+					</a>
 
 					</p>
                     <img src="./img/history/3_UTB_copyright_registered.png" style="max-width:900px">
