--- a/timeline.html
+++ b/timeline.html
@@ -43,7 +43,7 @@
             -->
 
             <a class="disc l2" href="https://www.utblifestyle.store/" target="_blank">
-                <div>merch |></div>
+                <div>store |></div>
             </a>
             <a class="disc l3" href="./contact.html">
                 <div>contact</div>
