--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       <div>music & videos</div>
     </a>
     <a class="disc l4" href="https://www.utblifestyle.store/" target="_blank">
-        <div>merch |> </div>
+        <div>store |> </div>
     </a>
     <a class="disc l5 toggle">
         <img src="./img/utb.png" width="110px" height="110px">
