--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           
         
             <a class="disc l2" href="https://www.utblifestyle.store/" target="_blank">
-                <div>merch |> </div>
+                <div>store |> </div>
             </a>
 
             <a class="disc l3" href="./music.html">
