--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
 
 
         <a class="disc l3" href="https://www.utblifestyle.store/" target="_blank">
-            <div>merch |></div>
+            <div>store |></div>
         </a>
 
         <a class="disc l4" href="./contact.html">
