update video frame size for better mobile for now

--- a/index.html
+++ b/index.html
@@ -228,9 +228,11 @@
 		    The revolution will be minted.
 		   <br><br>
 
-		   <iframe width="960" height="544" src="https://www.youtube.com/embed/5ilQXVXJJfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		   <!-- <iframe width="960" height="544" src="https://www.youtube.com/embed/5ilQXVXJJfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
-    </div>
+		   <iframe width="480" height="272" src="https://www.youtube.com/embed/5ilQXVXJJfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+		</div>
 
 
 	<header style="margin-top: 40px;">Our history</header>
