remove top text inside the roadmap tab

--- a/index.html
+++ b/index.html
@@ -441,10 +441,10 @@
 		  <div>
 			
 	<!-- <header style="margin-top: 40px;">Our history</header> -->
-	<br>
-	<header>
+	<br><br>
+	<!-- <header>
 		On 5th of August, get ready for multiple auctions. Here's our promise:
-	</header>	
+	</header>	 -->
 	<div class="bar"></div>
 <div class="timeline">
 	
