update text and size of the roadmap entries

--- a/index.html
+++ b/index.html
@@ -454,10 +454,11 @@
 		<span style="background: yellow;">
 			The drop will offer 3 nfts: in increasing order of rarity, 
 			<br> 	the original color UTB smiley designs; 
-		the original vector designs; 
+		<br>the original vector designs; 
 		<br>and the original sketch design. 
-		<br>however, we will only consider bids for successively rarer nfts 
-		<br>once all previous nfts hit their (privately held) reserve price. 
+		<br>however, we will only consider bids for successively 
+		<br>rarer nfts once all previous nfts hit 
+		<br>their (privately held) reserve price. 
 		<br> we call this a Russian Doll auction. 
 		<br><br>
 		</span>
@@ -468,15 +469,17 @@
 	<h1>@ August 5</h1>
 	<h2>UTB.NFT.001: Original Color UTB Smiley Design</h2>
 	<span style="background: rgb(0, 225, 255);">
-		The first nft of the drop is the original color money mouth smiley 
+		The first nft of the drop is the original color 
+		<br>Money Mouth Smiley©
 		<br> design files, created july 30th 2007. 
 		<br><br>We made our first shirts with one of the designs, 
 		<br>which we released as early as aug 2007. 
-		<br><br>the collector of this nft will receive all 3 original color money  
-		<br>mouth design files, with metadata proving their date of origin.
+		<br><br>The collector of this nft will receive all 3 original 
+		<br>color Money Mouth Smiley© design files, 
+		<br>with metadata proving their date of origin.
 	
-		<br>Eligibility to propose to UTB copyright licensing agreements at 
-		<br>no more than 69% royalty.
+		<br>Eligibility to propose to UTB copyright licensing  
+		<br>agreements at no more than 69% royalty.
 
 		<br>
 	</span>
