fix text to mobile screen

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 	<br>
 	<strong style="background: black; color: white;">minimum bid 1 Eth.</strong>
 	<br><br>
-	<div class="row" style="background: black;">
+	<div class="row" style="background: black; padding-top: 36px;">
 		<br><br>
 		<div class="column">
 		  <img src="./img/utb.png" alt="Hef" style="width:100%">
@@ -522,10 +522,11 @@
 	<span style="background: rgb(0, 255, 174);">
 		If UTB.NFT.001 and UTB.NFT.002 both hit 
 		<br>their (privately held) reserve prices, then we will begin 
-		<br>considering bids for the third and final nft in the drop series: 
-		<br>the original sketch design file, created July 18th 2007.
+		<br>considering bids for the third and final nft in the drop 
+		<br>series: the original sketch design file, 
+		<br>created July 18th 2007.
 		<br><br>
-		collector of this nft will receive:
+		The collector of this nft will receive:
 	</span>
 
 		<br><br>
@@ -539,10 +540,10 @@
 				</li>
    
 				<li>
-					10% copyright ownership, if and only if the collector or 
-					<br>their executors take actions that directly result in the 
-					<br>recovery of substantial damages to UTB from the copyright's 
-					<br>most egregious violators.
+					10% copyright ownership, if and only if the collector  
+					<br>or their executors take actions that directly result
+					<br>in the recovery of substantial damages to UTB from 
+					<br>the copyright's most egregious violators.
 				</li>
 		</div>
 		
