--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 	</span>
 
 		<br><br>
-		<div style="list-style-image: url('./img/star.png'); background: black; color: white;">
+		<div style="list-style-image: url('./img/star.png'); background: black; color: white;  padding-bottom: 10px;">
 
 				<li>
 					The origin scanned vector design file, with metadata <br> proving their date of origin.
@@ -572,7 +572,7 @@
 	</span>
 
 		<br><br>
-		<div style="list-style-image: url('./img/star.png'); background: black; color: white;">
+		<div style="list-style-image: url('./img/star.png'); background: black; color: white;  padding-bottom: 10px;">
 
 				<li>
 					The origin scanned sketch design file, with metadata <br> proving their date of origin.
