add jack in the box to history

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
 				<li><a href="#2015-10-oxf">++</a></li>
 				<li><a href="#2017-cashapp">2017</a></li>
 				<li><a href="#2018-webuygold">2018</a></li>
+				<li><a href="#2018-jack-in-the-box">Jun'18</a></li>
 	
 			  </ul>
 			  <ul id="issues">
@@ -426,6 +427,11 @@
 					<img src="img/history/11_webuygold_multimedia_corp_logo.png" style="max-width:900px"/>
 					<p> We Buy Gold multimedia company is created with Money Mouth Smiley© as their main logo" </p>
 				  </li>
+
+				  <li id="2018-jack-in-the-box">    
+					<img src="img/history/jack-the-box.png" style="max-width:900px"/>
+					<p> Dollar-eyed, recent Jack In The Box advertisement</p>
+				  </li>
 				  
 	
 			  </ul>
@@ -509,6 +515,7 @@
 		<div class="column">
 		  <img src="./img/biggty-smiley-removebg.png" alt="Biggity" style="width:100%">
 		</div>
+		
 	  </div>
 
 </div>
